# project-lunii

./: .gitignore  README.md
ai/: Dockerfile  requirements.txt
ai/aienv/: pyvenv.cfg
ai/deploy/: deploy_to_modal.py
ai/models/: download_llm.py
ai/training/: setup_and_train.sh  ssh_and_start.sh
backend/live-chat-service/: .gitignore  Cargo.toml  Dockerfile  README.Docker.md
backend/live-chat-service/live-chat-service/: Cargo.toml
backend/majestic-service/: Cargo.toml  Dockerfile  README.Docker.md
backend/majestic-service/api/: Cargo.toml
backend/majestic-service/file/: Cargo.toml
backend/majestic-service/file/src/: api.rs  config.rs  lib.rs
backend/majestic-service/file/src/api/: commands.rs
backend/majestic-service/file/src/api/commands/: get_ai_entity_3d_model_handler.rs
backend/majestic-service/file/src/application/: file_service.rs
backend/majestic-service/majestic-service/: Cargo.toml
backend/majestic-service/majestic-service/src/: config.rs  lib.rs  main.rs
data-processing/dataprep/: build.sbt
data-processing/dataprocess/: .gitignore  pom.xml
data-processing/general-data-processing-app/: pom.xml
dev/: compose.yaml
dev/alertmanager/: config.yaml
dev/alloy/: config.yaml
dev/grafana/dashboards/: system-overview.json
dev/localstack/assets/: carlotta.v0.glb.manifest
dev/localstack/configs/: cors.json  init.sh
dev/loki/: config.yaml
dev/prometheus/: prometheus.yaml
lunii-web-app/: Dockerfile  package-lock.json  package.json
scripts/: allow_ssh_agent_forwarding.sh  install_aws_cli.sh  install_docker.sh  install_git.sh
(+11 files in other folders)
