[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1.45.1", features = ["full"] }
once_cell.workspace = true
aws-sdk-s3 = "1.94.0"
aws-config = "1.8.0"
serde_json.workspace = true
axum.workspace = true